<?xml version="1.0"?>
<package format="3">
  <name>annin_ar4_driver</name>
  <version>3.0.0</version>
  <description>
    The annin_ar4_driver package provides the hardware interface for
    running an AR4 robot using the ros2_control software framework.
  </description>
  <license>MIT</license>

  <author>Annin Robotics</author>
  <author>Yifei Cheng - Chris Annin</author>
  <maintainer email="info@anninrobotics.com">Chris Annin</maintainer>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>annin_ar4_description</depend>
  <depend>boost</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
